Fix CSS spacing issues

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-  margin-top: 10%;
+  margin-top: 50px;
   margin-bottom: 10%;
 }
 
@@ -33,9 +33,9 @@ section {
 
 .message {
   padding-top: 10px;
-  margin-top: 2%;
-  margin-bottom: 15%;
-  width: 60%;
+  margin-top: 15px;
+  margin-bottom: 50px;
+  width: 50%;
   min-height: 90px;
 }
 
@@ -71,9 +71,9 @@ button:hover {
 }
 
 .output {
-  margin-top: 15%;
-  margin-bottom: 15%;
-  width: 85%;
+  margin-top: 10%;
+  margin-bottom: 150px;
+  width: 70%;
   min-height: 135px;
   display: flex;
   justify-content: center;
